--- a/src/style.pcss
+++ b/src/style.pcss
@@ -11,7 +11,7 @@
 
 /* Base styles */
 body {
-  @apply bg-gray-50 text-gray-800; /* Apply Tailwind classes directly */
+  @apply bg-gray-50 text-sky-900; /* Apply Tailwind classes directly */
 }
 
 html,
